Fix spacing

--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -51,12 +51,10 @@
                 padding: 25px 0 45px;
             }
             .contact {
+                margin-bottom: 40px;
                 p {
                     line-height: 0.4;
                 }
-            }
-            .details {
-                margin-top: 40px;
             }
         }
     }
